some overflows fixed

--- a/components/styles.css
+++ b/components/styles.css
@@ -6,14 +6,14 @@
   flex-direction: row;
   overflow-x: hidden;
   overflow-y: hidden;
-  height: 100vh;
+  height: auto;
 }
 
 .left-half {
   display: flex;
   flex-direction: column;
   width: 65vw;
-  height: 100vh;
+  height: auto;
   align-items: flex-start;
   position: relative;
   gap: 24px;
@@ -315,4 +315,8 @@ font-weight: 400;
 line-height: 40px; /* 200% */
 letter-spacing: -0.4px;
 text-transform: uppercase;
+}
+
+@media (max-width:425px) {
+  
 }
